# trail-signal-os

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  REPO_INVENTORY.md  build_graph.mmd  build_graph.yaml  docker-compose.yml  progress_ledger.csv  pyproject.toml
.github/: copilot-instructions.md
config/: constraints.yaml  evidence_gates.json  limits.yaml  models.yaml  phases.yaml  queues.yaml  research_run_states.json  scoring_weights.json  seasonality_rules.json  weights.yaml
control/: __init__.py
data/: CSV_README.md  activity_taxonomy.csv  friction_library.csv  niche_candidates.csv  outdoor_activity_niche_seed.csv  product_territories.csv  research_runs_index.csv  scoring_rubric.csv  search_query_templates.csv  seasonal_calendar.csv  source_registry.csv
db/: __init__.py
docs/: 00_mission_and_thesis.md  02_research_pipeline.md  03_evidence_standard.md  05_scoring_and_gates.md  06_agent_orchestration.md  07_rag_ingestion.md  08_source_adapters.md  09_safety_compliance_and_ethics.md  10_expansion_roadmap.md  AGENT_BUILD_CONTRACT.md  parallel_acquisition_architecture.md  speed_first_stack.md
fixtures/: __init__.py  load.py
gates/: gate-0.yaml  gate-7.yaml
graph/: __init__.py  compiler.py  executor.py
guards/: __init__.py  catalog.py  exceptions.py  registry.py  runner.py  runtime_guards.py  schema_guards.py  static_lint.py
harness/: __init__.py  gateway.py  litellm_adapter.py  node_executor.py
lineage/: __init__.py  diff.py  edges.py  replay.py  trace.py
manifests/: checksums.sha256  rag_manifest.csv  (+1 more)
(+224 files in other folders)
