[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trail-signal-os"
version = "1.0.0"
description = "Evidence-first outdoor product niche research toolkit"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "jsonschema>=4.0",
  "psycopg[binary]>=3.1",
  "PyYAML>=6.0",
  "redis>=5.0",
  "uvicorn>=0.32",
  "httpx>=0.27",
  "selectolax>=0.3",
  "trafilatura>=2.0",
]

[project.scripts]
niche-research = "niche_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
